end of (pre)testing in Edinburgh